--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "amplify": "^0.0.11",
     "aws-amplify": "^4.3.6",
+    "framer-motion": "^5.3.3",
+    "framer-motion-hooks": "^1.0.9",
     "next": "^12.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
