--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^2.0.21",
     "amplify": "^0.0.11",
     "aws-amplify": "^4.3.6",
     "framer-motion": "^5.3.3",
