--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion-hooks": "^1.0.9",
     "next": "^12.0.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
