--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-amplify": "^4.3.6",
     "framer-motion": "^5.3.3",
     "framer-motion-hooks": "^1.0.9",
+    "handlebars": "^4.7.7",
     "next": "^12.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
