--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
-    "@react-pdf/renderer": "^2.0.21",
-    "aws-amplify": "^4.3.6",
     "framer-motion": "^5.3.3",
     "framer-motion-hooks": "^1.0.9",
-    "handlebars": "^4.7.7",
     "next": "^12.0.3",
+    "next-plausible": "^3.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sharp": "^0.29.3"
