--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "fathom-client": "^3.2.0",
     "framer-motion": "^5.3.3",
     "framer-motion-hooks": "^1.0.9",
     "next": "^12.0.3",
