--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "fathom-client": "^3.3.1",
     "framer-motion": "^5.3.3",
     "framer-motion-hooks": "^1.0.9",
+    "logrocket": "^2.1.3",
     "next": "^12.0.3",
     "next-plausible": "^3.1.4",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sharp": "^0.29.3"
